RESOLVED FIXED15750
REGRESSION(r27173): Web Inspector freezes beneath Image::drawPattern()
https://bugs.webkit.org/show_bug.cgi?id=15750
Summary REGRESSION(r27173): Web Inspector freezes beneath Image::drawPattern()
Alexey Proskuryakov
Reported 2007-10-29 09:23:08 PDT
Steps to reproduce: 1. Open fast/xsl/xslt-mismatched-tags-in-xslt.xml. 2. Open Web Inspector. 3. Click on a stylesheet at the left. r27173 was an Inspector fix that has apparently uncovered a pre-existing WebCore bug.
Attachments
Reduction (will hang) (214 bytes, text/html)
2007-10-29 10:07 PDT, mitz
no flags
Clamp background tile dimensions up to 1 (30.68 KB, patch)
2007-10-29 19:12 PDT, mitz
aroben: review+
mitz
Comment 1 2007-10-29 10:07:08 PDT
Created attachment 16937 [details] Reduction (will hang) The tile width gets rounded down to 0...
mitz
Comment 2 2007-10-29 11:14:40 PDT
*** Bug 15752 has been marked as a duplicate of this bug. ***
mitz
Comment 3 2007-10-29 19:12:09 PDT
Created attachment 16940 [details] Clamp background tile dimensions up to 1
Adam Roben (:aroben)
Comment 4 2007-10-29 19:25:33 PDT
Comment on attachment 16940 [details] Clamp background tile dimensions up to 1 + if (!patternTransform.isInvertible()) { + ASSERT_NOT_REACHED(); + // Avoid a hang under CGContextDrawTiledImage on release builds. + return; + } I think it would be slightly better to do: ASSERT(!patternTransform.isInvertible()); if (!patternTransform.isInvertible) return; This way the failed condition will appear on the console, instead of just "NOT REACHED". Should the test be text-only? r=me
mitz
Comment 5 2007-10-29 19:33:15 PDT
(In reply to comment #4) > I think it would be slightly better to do: > > ASSERT(!patternTransform.isInvertible()); > if (!patternTransform.isInvertible) > return; Actually, that would be the wrong thing to assert :-) I think the ASSERT_NOT_REACHED style is more readable, but I'll change to the explicit (but correct) assertion because of console output. > Should the test be text-only? Since it's a rendering test, I feel that the pixel result gives a little better regression protection than just "didn't crash".
mitz
Comment 6 2007-10-29 20:07:46 PDT
Note You need to log in before you can comment on or make changes to this bug.