WebCore:

Reviewed by Adam Roben.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15750
          REGRESSION(r27173): Web Inspector freezes beneath Image::drawPattern()

        Test: fast/backgrounds/size/zero.html

        * platform/graphics/cg/ImageCG.cpp:
        (WebCore::Image::drawPattern): Added an ASSERT and an early return
        to guard against singular pattern transforms.
        * rendering/RenderBox.cpp:
        (WebCore::cacluateBackgroundSize): Changed to ensure a minimum tile
        size of 1x1.

LayoutTests:

        Reviewed by Adam Roben.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15750
          REGRESSION(r27173): Web Inspector freezes beneath Image::drawPattern()

        * fast/backgrounds/size/zero.html: Added.
        * platform/mac/fast/backgrounds/size/zero-expected.checksum: Added.
        * platform/mac/fast/backgrounds/size/zero-expected.png: Added.
        * platform/mac/fast/backgrounds/size/zero-expected.txt: Added.



Canonical link: https://commits.webkit.org/21172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27251 268f45cc-cd09-0410-ab3c-d52691b4dbfc