WebCore/platform/graphics/cg/ImageCG.cpp
@@ -180,6 +180,11 @@ void Image::drawPatternCallback(void* info, CGContextRef context)
 void Image::drawPattern(GraphicsContext* ctxt, const FloatRect& tileRect, const AffineTransform& patternTransform,
                         const FloatPoint& phase, CompositeOperator op, const FloatRect& destRect)
 {
+    ASSERT(patternTransform.isInvertible());
+    if (!patternTransform.isInvertible())
+        // Avoid a hang under CGContextDrawTiledImage on release builds.
+        return;
+
     CGContextRef context = ctxt->platformContext();
     ctxt->save();
     CGContextClipToRect(context, destRect);
